--- a/themes/hugo-theme-learn/layouts/partials/menu-footer.html
+++ b/themes/hugo-theme-learn/layouts/partials/menu-footer.html
@@ -1,4 +1,4 @@
-<p>Contributions by: <a href="http://rockemsockemrobotics.com" target="_blank">FRC 453</a> & FRC 2129 Ultraviolet & FTC 12600 Robotters </p>
+<p>Contributions by: <a href="http://rockemsockemrobotics.com" target="_blank">FRC 453 Rock'em Sock'em Robotics</a> & FRC 2129 Ultraviolet & FTC 12600 Robotters </p>
 <br>
 <p>Hosting, Domain and Support by: <a href="https://mrsiefensrobotemporium.com" target="_blank">Mr. Siefen's Robot Emporium</a></p>
 <br>
