--- a/layouts/404.html
+++ b/layouts/404.html
@@ -46,7 +46,7 @@
   var imgElem;
   var imgArr;
   
-  
+  //assuming imgElem and imgArr are set:
   function displayRndImage () {
           var num = Math.floor(Math.random() * imgArr.length);
           var imgfile =  imgArr[num];
