Add Discord Link

--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -1,3 +1,5 @@
+<p>Join Our Discord! https://discord.gg/Ja2WFKCjEK</p>
+
 <p><a href="/about/contributors">Contributors are listed here!</a></p>
 <br>
 <p>Hosting, Domain and Support by: <a href="https://mrsiefensrobotemporium.com" target="_blank">Mr. Siefen's Robot Emporium</a></p>
